--- a/src/main/webapp/resources/css/login/css/style.css
+++ b/src/main/webapp/resources/css/login/css/style.css
@@ -16,8 +16,8 @@ body{
 }
 .header-logo{
     display: inline-block;
-    width: 130px;
-    height: 130px;
+    width: 80px;
+    height: 80px;
     background: url('../image/logo.png') no-repeat top left;
     background-size: 100% 100%;
     vertical-align: middle;
@@ -27,6 +27,7 @@ body{
     display: inline-block;
     font-size: 26px;
     color: #ffffff;
+    vertical-align: middle;
 }
 .wrapper-body{
     position: relative;
