--- a/src/main/webapp/resources/css/login/css/style.css
+++ b/src/main/webapp/resources/css/login/css/style.css
@@ -145,6 +145,9 @@ body{
 .btn-login{
     background-image: url('../image/login_btn.jpg');
 }
+.btn-queding{
+    background-image: url('../image/queding.jpg');
+}
 .btn-reg{
     background-image: url('../image/cancel.jpg');
 }
